--- a/src/css/style.css
+++ b/src/css/style.css
@@ -57,6 +57,10 @@ main::after {
     color: var(--cor-principal);
 }
 
+strong{
+    font-weight: 400;
+}
+
 .botoes-carrosel {
     display: flex;
     justify-content: center;
